Fixed spacing of code

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 #wrapper{
-  width: 90%;
+  width: 85%;
   margin: 1rem auto;
   text-align: left;
 }
@@ -32,7 +32,7 @@ body {
 /* ============ */
 
 .header-wrap{
-	width: 90%;
+	width: 85%;
 	margin: 1rem auto;
   position: relative;
 }
@@ -106,7 +106,7 @@ nav #tako{
 */
 
 .nav-main-wrap{
-	width: 90%;
+	width: 85%;
 	margin: 0rem auto;
   position: relative;
 }
@@ -1156,6 +1156,7 @@ figcaption{
 /* ====================== */
 
 .pageTitle{
+  /*position: relative;*/
   margin-top: 2em;
   border-bottom: 0.1em solid #CCC;
 }
